# community-persona

./: .gitignore  README.md  app_new.py  check_logs.py  community_data.csv  load_faiss_data.py  main.py  pyproject.toml  verify_faiss.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 버그-템플릿.md  이슈-템플릿.md
core/: __init__.py  config.py  constants.py
database/: __init__.py  connection.py  crud.py  models.py
frontend/: __init__.py
frontend/components/: __init__.py  sidebar.py  ui_helpers.py
frontend/pages/: __init__.py  community_cases.py  copy_result.py  history.py  login.py  user_input.py
prompts/: community_tone.yaml  emphasis_points.yaml  fmkorea.yaml  fmkorea_eng.yaml  mam2bebe.yaml  mam2bebe_eng.yaml  ppomppu.yaml  ppomppu_eng.yaml  product_description.yaml  regenerate_fmkorea.yaml  regenerate_mam2bebe.yaml  regenerate_ppomppu.yaml
services/: __init__.py  ai_content_service.py  ai_service.py  content_service.py  gemini_service.py  llm_service.py  prompt_service.py  user_service.py
streamlit/: app.py
utils/: __init__.py  get_logger.py  prompt_loader.py  validators.py
